Fixed contrast error on index.html

--- a/css/content.css
+++ b/css/content.css
@@ -192,6 +192,11 @@ button.submit,
 /* Desktop styling */
 
 @media (min-width: 1100px) {
+  .index-h1 {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 0.1rem 3rem;
+  }
+
   .intro,
   .blog-h1,
   .blogs-intro {
